# play

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.bat
.github/: copilot-instructions.md
.zed/: debug.json
docs/: alloc_and_structures.md
examples/: play_sdl3_example.cpp
play/: play.cpp  play.hpp  play_bind.hpp
play/core/: cglm.hpp  common.hpp  context.cpp  context.hpp  core.hpp  meta.hpp  test.cpp  test.hpp
play/data/: buffer.hpp  data.hpp  string_buffer.hpp
play/os/: log.cpp  log.hpp  mem.cpp  mem.hpp  mod.cpp  mod.hpp  mt.hpp  os.hpp  process.hpp  watcher.cpp  watcher.hpp
play_sdl3/: play_sdl3.cpp  play_sdl3.hpp  play_sdl3_os.cpp
play_tests/: data_01_dyn_array.hpp  play_test_main.cpp
